[package]
name = "sui-security-watchdog"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ssh2 = "0.9.4"
arrow-array.workspace = true
mysten-metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
cron = "0.8"
tokio.workspace = true
tokio-cron-scheduler = "0.10.0"
anyhow.workspace = true
chrono.workspace = true
snowflake-api = { version = "0.6.0"  }
clap.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true
async-trait.workspace = true
uuid.workspace = true
log = "0.4.21"